# ojosama-generator

./: .gitignore  main.ts
backend/: README.md  main.py  parser.py  pyproject.toml
frontend/: index.html  main.ts  package.json  tsconfig.json
